Fix auto-zoom on input field on Safari iOS.

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -207,6 +207,10 @@ video {
         font-size: 0.7rem;
     }
 
+    input {
+        font-size: 16px;
+    }
+
     .main-container {
         display: flex;
         flex-direction: column;
